# catalog/internal/server/openapi/api_agent.go
@@ -13,6 +13,7 @@ package openapi
 import (
 	"context"
 	"net/http"
+	"os"
 
 	model "github.com/kubeflow/hub/catalog/pkg/openapi"
 )
@@ -25,6 +26,7 @@ type AgentCatalogServiceAPIRouter interface {
 	GetAgentFilterOptions(http.ResponseWriter, *http.Request)
 	GetAgent(http.ResponseWriter, *http.Request)
 	FindAgentSources(http.ResponseWriter, *http.Request)
+	PreviewAgentCatalogSource(http.ResponseWriter, *http.Request)
 }
 
 // AgentCatalogServiceAPIServicer defines the api actions for the AgentCatalogServiceAPI service
@@ -36,4 +38,5 @@ type AgentCatalogServiceAPIServicer interface {
 	GetAgentFilterOptions(context.Context) (ImplResponse, error)
 	GetAgent(context.Context, string) (ImplResponse, error)
 	FindAgentSources(context.Context) (ImplResponse, error)
+	PreviewAgentCatalogSource(context.Context, *os.File, string, string, string, *os.File) (ImplResponse, error)
 }
