# catalog/pkg/openapi/model_preview_agent_catalog_source_200_response.go
@@ -1,0 +1,161 @@
+/*
+Catalog REST API
+
+REST API for Kubeflow Hub Catalog
+
+API version: v1alpha1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the PreviewAgentCatalogSource200Response type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &PreviewAgentCatalogSource200Response{}
+
+// PreviewAgentCatalogSource200Response struct for PreviewAgentCatalogSource200Response
+type PreviewAgentCatalogSource200Response struct {
+	// Array of agent preview results.
+	Agents  []AgentPreviewResult                         `json:"agents,omitempty"`
+	Summary *PreviewAgentCatalogSource200ResponseSummary `json:"summary,omitempty"`
+}
+
+// NewPreviewAgentCatalogSource200Response instantiates a new PreviewAgentCatalogSource200Response object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewPreviewAgentCatalogSource200Response() *PreviewAgentCatalogSource200Response {
+	this := PreviewAgentCatalogSource200Response{}
+	return &this
+}
+
+// NewPreviewAgentCatalogSource200ResponseWithDefaults instantiates a new PreviewAgentCatalogSource200Response object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewPreviewAgentCatalogSource200ResponseWithDefaults() *PreviewAgentCatalogSource200Response {
+	this := PreviewAgentCatalogSource200Response{}
+	return &this
+}
+
+// GetAgents returns the Agents field value if set, zero value otherwise.
+func (o *PreviewAgentCatalogSource200Response) GetAgents() []AgentPreviewResult {
+	if o == nil || IsNil(o.Agents) {
+		var ret []AgentPreviewResult
+		return ret
+	}
+	return o.Agents
+}
+
+// GetAgentsOk returns a tuple with the Agents field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PreviewAgentCatalogSource200Response) GetAgentsOk() ([]AgentPreviewResult, bool) {
+	if o == nil || IsNil(o.Agents) {
+		return nil, false
+	}
+	return o.Agents, true
+}
+
+// HasAgents returns a boolean if a field has been set.
+func (o *PreviewAgentCatalogSource200Response) HasAgents() bool {
+	if o != nil && !IsNil(o.Agents) {
+		return true
+	}
+
+	return false
+}
+
+// SetAgents gets a reference to the given []AgentPreviewResult and assigns it to the Agents field.
+func (o *PreviewAgentCatalogSource200Response) SetAgents(v []AgentPreviewResult) {
+	o.Agents = v
+}
+
+// GetSummary returns the Summary field value if set, zero value otherwise.
+func (o *PreviewAgentCatalogSource200Response) GetSummary() PreviewAgentCatalogSource200ResponseSummary {
+	if o == nil || IsNil(o.Summary) {
+		var ret PreviewAgentCatalogSource200ResponseSummary
+		return ret
+	}
+	return *o.Summary
+}
+
+// GetSummaryOk returns a tuple with the Summary field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PreviewAgentCatalogSource200Response) GetSummaryOk() (*PreviewAgentCatalogSource200ResponseSummary, bool) {
+	if o == nil || IsNil(o.Summary) {
+		return nil, false
+	}
+	return o.Summary, true
+}
+
+// HasSummary returns a boolean if a field has been set.
+func (o *PreviewAgentCatalogSource200Response) HasSummary() bool {
+	if o != nil && !IsNil(o.Summary) {
+		return true
+	}
+
+	return false
+}
+
+// SetSummary gets a reference to the given PreviewAgentCatalogSource200ResponseSummary and assigns it to the Summary field.
+func (o *PreviewAgentCatalogSource200Response) SetSummary(v PreviewAgentCatalogSource200ResponseSummary) {
+	o.Summary = &v
+}
+
+func (o PreviewAgentCatalogSource200Response) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o PreviewAgentCatalogSource200Response) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.Agents) {
+		toSerialize["agents"] = o.Agents
+	}
+	if !IsNil(o.Summary) {
+		toSerialize["summary"] = o.Summary
+	}
+	return toSerialize, nil
+}
+
+type NullablePreviewAgentCatalogSource200Response struct {
+	value *PreviewAgentCatalogSource200Response
+	isSet bool
+}
+
+func (v NullablePreviewAgentCatalogSource200Response) Get() *PreviewAgentCatalogSource200Response {
+	return v.value
+}
+
+func (v *NullablePreviewAgentCatalogSource200Response) Set(val *PreviewAgentCatalogSource200Response) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullablePreviewAgentCatalogSource200Response) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullablePreviewAgentCatalogSource200Response) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullablePreviewAgentCatalogSource200Response(val *PreviewAgentCatalogSource200Response) *NullablePreviewAgentCatalogSource200Response {
+	return &NullablePreviewAgentCatalogSource200Response{value: val, isSet: true}
+}
+
+func (v NullablePreviewAgentCatalogSource200Response) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullablePreviewAgentCatalogSource200Response) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
