# catalog/pkg/openapi/model_preview_agent_catalog_source_200_response_summary.go
@@ -1,0 +1,196 @@
+/*
+Catalog REST API
+
+REST API for Kubeflow Hub Catalog
+
+API version: v1alpha1
+*/
+
+// Code generated by OpenAPI Generator (https://openapi-generator.tech); DO NOT EDIT.
+
+package openapi
+
+import (
+	"encoding/json"
+)
+
+// checks if the PreviewAgentCatalogSource200ResponseSummary type satisfies the MappedNullable interface at compile time
+var _ MappedNullable = &PreviewAgentCatalogSource200ResponseSummary{}
+
+// PreviewAgentCatalogSource200ResponseSummary Summary of the preview results.
+type PreviewAgentCatalogSource200ResponseSummary struct {
+	TotalCount    *int32 `json:"totalCount,omitempty"`
+	IncludedCount *int32 `json:"includedCount,omitempty"`
+	ExcludedCount *int32 `json:"excludedCount,omitempty"`
+}
+
+// NewPreviewAgentCatalogSource200ResponseSummary instantiates a new PreviewAgentCatalogSource200ResponseSummary object
+// This constructor will assign default values to properties that have it defined,
+// and makes sure properties required by API are set, but the set of arguments
+// will change when the set of required properties is changed
+func NewPreviewAgentCatalogSource200ResponseSummary() *PreviewAgentCatalogSource200ResponseSummary {
+	this := PreviewAgentCatalogSource200ResponseSummary{}
+	return &this
+}
+
+// NewPreviewAgentCatalogSource200ResponseSummaryWithDefaults instantiates a new PreviewAgentCatalogSource200ResponseSummary object
+// This constructor will only assign default values to properties that have it defined,
+// but it doesn't guarantee that properties required by API are set
+func NewPreviewAgentCatalogSource200ResponseSummaryWithDefaults() *PreviewAgentCatalogSource200ResponseSummary {
+	this := PreviewAgentCatalogSource200ResponseSummary{}
+	return &this
+}
+
+// GetTotalCount returns the TotalCount field value if set, zero value otherwise.
+func (o *PreviewAgentCatalogSource200ResponseSummary) GetTotalCount() int32 {
+	if o == nil || IsNil(o.TotalCount) {
+		var ret int32
+		return ret
+	}
+	return *o.TotalCount
+}
+
+// GetTotalCountOk returns a tuple with the TotalCount field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PreviewAgentCatalogSource200ResponseSummary) GetTotalCountOk() (*int32, bool) {
+	if o == nil || IsNil(o.TotalCount) {
+		return nil, false
+	}
+	return o.TotalCount, true
+}
+
+// HasTotalCount returns a boolean if a field has been set.
+func (o *PreviewAgentCatalogSource200ResponseSummary) HasTotalCount() bool {
+	if o != nil && !IsNil(o.TotalCount) {
+		return true
+	}
+
+	return false
+}
+
+// SetTotalCount gets a reference to the given int32 and assigns it to the TotalCount field.
+func (o *PreviewAgentCatalogSource200ResponseSummary) SetTotalCount(v int32) {
+	o.TotalCount = &v
+}
+
+// GetIncludedCount returns the IncludedCount field value if set, zero value otherwise.
+func (o *PreviewAgentCatalogSource200ResponseSummary) GetIncludedCount() int32 {
+	if o == nil || IsNil(o.IncludedCount) {
+		var ret int32
+		return ret
+	}
+	return *o.IncludedCount
+}
+
+// GetIncludedCountOk returns a tuple with the IncludedCount field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PreviewAgentCatalogSource200ResponseSummary) GetIncludedCountOk() (*int32, bool) {
+	if o == nil || IsNil(o.IncludedCount) {
+		return nil, false
+	}
+	return o.IncludedCount, true
+}
+
+// HasIncludedCount returns a boolean if a field has been set.
+func (o *PreviewAgentCatalogSource200ResponseSummary) HasIncludedCount() bool {
+	if o != nil && !IsNil(o.IncludedCount) {
+		return true
+	}
+
+	return false
+}
+
+// SetIncludedCount gets a reference to the given int32 and assigns it to the IncludedCount field.
+func (o *PreviewAgentCatalogSource200ResponseSummary) SetIncludedCount(v int32) {
+	o.IncludedCount = &v
+}
+
+// GetExcludedCount returns the ExcludedCount field value if set, zero value otherwise.
+func (o *PreviewAgentCatalogSource200ResponseSummary) GetExcludedCount() int32 {
+	if o == nil || IsNil(o.ExcludedCount) {
+		var ret int32
+		return ret
+	}
+	return *o.ExcludedCount
+}
+
+// GetExcludedCountOk returns a tuple with the ExcludedCount field value if set, nil otherwise
+// and a boolean to check if the value has been set.
+func (o *PreviewAgentCatalogSource200ResponseSummary) GetExcludedCountOk() (*int32, bool) {
+	if o == nil || IsNil(o.ExcludedCount) {
+		return nil, false
+	}
+	return o.ExcludedCount, true
+}
+
+// HasExcludedCount returns a boolean if a field has been set.
+func (o *PreviewAgentCatalogSource200ResponseSummary) HasExcludedCount() bool {
+	if o != nil && !IsNil(o.ExcludedCount) {
+		return true
+	}
+
+	return false
+}
+
+// SetExcludedCount gets a reference to the given int32 and assigns it to the ExcludedCount field.
+func (o *PreviewAgentCatalogSource200ResponseSummary) SetExcludedCount(v int32) {
+	o.ExcludedCount = &v
+}
+
+func (o PreviewAgentCatalogSource200ResponseSummary) MarshalJSON() ([]byte, error) {
+	toSerialize, err := o.ToMap()
+	if err != nil {
+		return []byte{}, err
+	}
+	return json.Marshal(toSerialize)
+}
+
+func (o PreviewAgentCatalogSource200ResponseSummary) ToMap() (map[string]interface{}, error) {
+	toSerialize := map[string]interface{}{}
+	if !IsNil(o.TotalCount) {
+		toSerialize["totalCount"] = o.TotalCount
+	}
+	if !IsNil(o.IncludedCount) {
+		toSerialize["includedCount"] = o.IncludedCount
+	}
+	if !IsNil(o.ExcludedCount) {
+		toSerialize["excludedCount"] = o.ExcludedCount
+	}
+	return toSerialize, nil
+}
+
+type NullablePreviewAgentCatalogSource200ResponseSummary struct {
+	value *PreviewAgentCatalogSource200ResponseSummary
+	isSet bool
+}
+
+func (v NullablePreviewAgentCatalogSource200ResponseSummary) Get() *PreviewAgentCatalogSource200ResponseSummary {
+	return v.value
+}
+
+func (v *NullablePreviewAgentCatalogSource200ResponseSummary) Set(val *PreviewAgentCatalogSource200ResponseSummary) {
+	v.value = val
+	v.isSet = true
+}
+
+func (v NullablePreviewAgentCatalogSource200ResponseSummary) IsSet() bool {
+	return v.isSet
+}
+
+func (v *NullablePreviewAgentCatalogSource200ResponseSummary) Unset() {
+	v.value = nil
+	v.isSet = false
+}
+
+func NewNullablePreviewAgentCatalogSource200ResponseSummary(val *PreviewAgentCatalogSource200ResponseSummary) *NullablePreviewAgentCatalogSource200ResponseSummary {
+	return &NullablePreviewAgentCatalogSource200ResponseSummary{value: val, isSet: true}
+}
+
+func (v NullablePreviewAgentCatalogSource200ResponseSummary) MarshalJSON() ([]byte, error) {
+	return json.Marshal(v.value)
+}
+
+func (v *NullablePreviewAgentCatalogSource200ResponseSummary) UnmarshalJSON(src []byte) error {
+	v.isSet = true
+	return json.Unmarshal(src, &v.value)
+}
